# Snake

./: CMakeLists.txt  README.md
include/: cell.h  food.h  game.h  grid.h  list.h  player.h  snake.h
src/: cell.cpp  game.cpp  grid.cpp  main.cpp  snake.cpp
